<?xml version="1.0"?>
<package>
  <name>lidar_eskf</name>
  <version>0.0.0</version>
  <description>The lidar_eskf package for rotating LiDAR localization</description>
  <maintainer email="weikunz@andrew.cmu.edu">Weikun Zhen (The AIR lab, Carnegie Mellon University)</maintainer>

  <author>Weikun Zhen (The AIR lab, Carnegie Mellon University) </author>
  <url type="website"></url>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>dynamicEDT3D</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>dynamicEDT3D</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>laser_geometry</run_depend>

</package>
